--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - VoteSure Mobile Application</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://raw.githubusercontent.com/dgdigital-tech/Privacy-Policy/refs/heads/main/favicon.ico" rel="shortcut icon">
 </head>
 
 <body>
